# agent-framework-workshop

./: .env.example  README.md  pyproject.toml  workshop_utils.py
.devcontainer/: devcontainer.json
01-single-agents/: 01.1-single-agents.ipynb  01.2-single-agent-mcp.ipynb
02-workflows/: 02.1-intro-workflows.ipynb  02.2-orchestrations.ipynb
03-rag/: 03.0-setup-guide.md  03.1-rag-agent.ipynb  03.1-rag-fundamentals.ipynb  03.2-context-providers.ipynb
04-human-in-the-loop/: 04.1-hitl-intro.ipynb  04.2-hitl-workflows.ipynb
guides/: blob-storage-ai-search-integration.md
mcp/: mcp_server.py
